chore(icon): Added link to iconography design guideline (#4091)

--- a/packages/design-system/ui/components/icons/docs.mdx
+++ b/packages/design-system/ui/components/icons/docs.mdx
@@ -11,8 +11,7 @@ import * as UtilityIconExamples from '../icons/base/example';
 import { getDisplayElementById } from '../../shared/helpers';
 
 <div className="doc lead">
-  Icons provide visual context and enhance usability. All of the Icons can be
-  found <a href="/icons">here</a>.
+  Icons provide visual context and enhance usability. Read more in the <a href="/guidelines/iconography" title="Iconography Guidelines">Iconography design guideline</a> and for a full list of icons available, visit the <a href="/icons" title="Icons">Icons page</a>.
 </div>
 
 <CodeView exampleOnly>
