chore(docs): clean up hierarchies, typos, and mobile sections (#4131)

--- a/packages/design-system/ui/components/checkbox-button-group/docs.mdx
+++ b/packages/design-system/ui/components/checkbox-button-group/docs.mdx
@@ -10,7 +10,7 @@ import * as Base from './base/example';
 
 <CodeView exampleOnly>{Base.default}</CodeView>
 
-## About Checkbox-button-group
+## About Checkbox Button Group
 
 The checkbox-button-group is a set of [checkbox buttons](/components/checkbox-button) wrapped in a fieldset that is also a [form element](/components/form-element). It is described by a legend with the classes `slds-form-element__legend` and `slds-form-element__label` applied to it.
 
@@ -27,8 +27,3 @@ The checkbox-button-group is a set of [checkbox buttons](/components/checkbox-bu
 ### Disabled
 
 <CodeView>{getDisplayElementById(Base.states, 'disabled')}</CodeView>
-
-## Mobile
-
-Within the mobile scope, the layout of checkbox button group becomes stacked to
-account for the limited horizontal space of mobile screens.
