--- a/packages/design-system/ui/components/checkbox-button/docs.mdx
+++ b/packages/design-system/ui/components/checkbox-button/docs.mdx
@@ -28,7 +28,7 @@ Use the add button if the component you’re building:
 
 ## Structure and Implementation
 
-The checkbox `<input>` is visually hidden with `.slds-assistive-text` and a a faux checkbox is created using the [icon blueprint](/components/icons) which allows the display of an icon instead of the standard checkbox.
+The checkbox `<input>` is visually hidden with `.slds-assistive-text` and a faux checkbox is created using the [icon blueprint](/components/icons) which allows the display of an icon instead of the standard checkbox.
 
 Click and tap events are captured by a `<label>` that encases the entire blueprint. The `for` attribute of your `<label>` must match the `id` attribute of your `<input>`.
 
