--- a/packages/design-system/ui/components/radio-button-group/docs.mdx
+++ b/packages/design-system/ui/components/radio-button-group/docs.mdx
@@ -8,31 +8,28 @@ import * as RadioButtonGroupExamples from './base/example';
   A styled select list that can have a single entry checked at any one time.
 </div>
 
+## About Radio Button Group
+
 ## Default
 
 <CodeView>{RadioButtonGroupExamples.default}</CodeView>
 
-### States
+## States
 
-#### Disabled
+### Disabled
 
 <CodeView>
   {getDisplayElementById(RadioButtonGroupExamples.states, 'disabled')}
 </CodeView>
 
-#### Required
+### Required
 
 <CodeView>
   {getDisplayElementById(RadioButtonGroupExamples.states, 'required')}
 </CodeView>
 
-#### Has Error
+### Has Error
 
 <CodeView>
   {getDisplayElementById(RadioButtonGroupExamples.states, 'error')}
 </CodeView>
-
-## Mobile
-
-Within the mobile scope, the layout of radio button group becomes stacked to
-account for the limited horizontal space of mobile screens.
