fix(docs): Update Unescaped Entities, Typos, Code Examples in Docs (#4149)

--- a/packages/design-system/ui/components/app-launcher/docs.mdx
+++ b/packages/design-system/ui/components/app-launcher/docs.mdx
@@ -34,7 +34,7 @@ When the tile description is too long to fit on 2 lines, a "more" `button` is sh
   Multi-line truncation can only be done via JavaScript. You should calculate how many characters will fit over a maximum of 2 lines, depending on the tile width and trim the string accordingly.
 </Blockquote>
 
-On hover or focus, the more `button` will display the full desscription using a [Tooltip](/components/tooltips)
+On hover or focus, the more `button` will display the full description using a [Tooltip](/components/tooltips)
 
 <CodeView isViewport style={getDemoStylesById(AppLauncherExamples.states, 'tooltip')}>
   {getDisplayElementById(AppLauncherExamples.states, 'tooltip')}
