--- a/packages/design-system/ui/components/builder-header/docs.mdx
+++ b/packages/design-system/ui/components/builder-header/docs.mdx
@@ -4,8 +4,6 @@ import Example from '../../../shared/components/Example';
 import Blockquote from '../../../shared/components/Blockquote';
 import BuilderHeader from './index.jsx';
 
-// import style from './docs/index.scss';
-
 <div className="doc lead">
   Every builder needs a builder header, which contains basic navigation
   elements. It also shows the builder type and content name.
@@ -19,7 +17,7 @@ import BuilderHeader from './index.jsx';
 
 ## About Builder Header
 
-To learn more about the Builder pattern in general, check out our <a href="/guidelines/builder">guidelines</a>, which includes a section about how to use the <a href="/guidelines/builder/#Builder-Header">Builder Header</a>.
+To learn more about the Builder pattern in general, check out our [guidelines](/guidelines/builder), which includes a section about how to use the [Builder Header](/guidelines/builder/#Builder-Header).
 
 ## Base
 
