--- a/packages/design-system/ui/components/buttons/docs.mdx
+++ b/packages/design-system/ui/components/buttons/docs.mdx
@@ -231,8 +231,8 @@ The Dual Stateful button requires the `slds-button_dual-stateful` class, along w
 The button contains two spans. Each span contains display text and a corresponding SVG icon with the class `slds-button__icon-left` and has classes that hide or show the contents. By default, the first span with the class `slds-text-is-not-pressed` is displayed; when the class `slds-is-pressed` is applied to the parent button, the span with the class `slds-text-is-pressed` is displayed.
 
 <Blockquote type="a11y" header="Accessibility Requirement">
-  Be sure to include the attribute `aria-live="assertive"` on the button. The
-  `aria-live="assertive"` attribute means the value of the `&lt;span&gt;` inside
+  Be sure to include the attribute <code>aria-live="assertive"</code> on the button. The
+  <code>aria-live="assertive"</code> attribute means the value of the <code>&lt;span&gt;</code> inside
   the button will be spoken whenever it changes.
 </Blockquote>
 
