--- a/packages/design-system/ui/components/chat/docs.mdx
+++ b/packages/design-system/ui/components/chat/docs.mdx
@@ -62,7 +62,7 @@ A chat consists of an unordered list of possible chat items, wrapped in a `secti
 
 ### Accessibility
 
-The <code className="doc">log</code> role has an implicit <code className="doc">aria-live</code> property value of <code className="doc">polite</code>, meaning that it comes for free. It also has an implicit <code className="doc">aria-relevant</code> property value of <code className="doc">additions text</code>. Together this means any additional text, or chat items added to the list will automatically be politely announced by a screen reader
+The `log` role has an implicit `aria-live` property value of `polite`, meaning that it comes for free. It also has an implicit `aria-relevant` property value of `additions text`.` Together this means any additional text, or chat items added to the list will automatically be politely announced by a screen reader.
 
 ## Base
 
