--- a/packages/design-system/ui/components/datepickers/docs.mdx
+++ b/packages/design-system/ui/components/datepickers/docs.mdx
@@ -75,7 +75,7 @@ The datepicker has the following markup requirements:
   - `left` and `right` arrow keys to navigate row
   - `up` and `down` arrow keys to navigate between weeks on the same day
   - `home` and `end` keys to jump to beginning or end of current row
-  - `pagedown` and `pageup` to naviate between months
+  - `pagedown` and `pageup` to navigate between months
   - `alt + pagedown` and `alt + pageup` to navigate between years
   - `enter` to select date and close datepicker
   - `esc` to close datepicker without choosing a date
