--- a/packages/design-system/ui/components/expandable-section/docs.mdx
+++ b/packages/design-system/ui/components/expandable-section/docs.mdx
@@ -42,7 +42,7 @@ If the Section Title is interactive, the button needs to be associated with the 
 </CodeView>
 
 ## Examples
-### Non-collapsable
+### Non-collapsible
 <CodeView>
   {getDisplayElementById(Base.examples, 'non-collapsable')}
 </CodeView>
