--- a/packages/design-system/ui/components/illustration/docs.mdx
+++ b/packages/design-system/ui/components/illustration/docs.mdx
@@ -26,7 +26,7 @@ Illustrations should be used within other components, such as cards, to express 
 
 ### Accessibility
 
-Each SVG tag requires an <code>aria-hidden="true"</code> attribute.
+Each SVG tag requires an `aria-hidden="true"` attribute.
 
 <CodeBlock toggleCode={false}>
   <svg viewBox="0 0 483 218" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink">...</svg>
@@ -43,7 +43,7 @@ Each SVG tag requires an <code>aria-hidden="true"</code> attribute.
 
 ## Using Empty States
 
-Empty states are used when an element doesn’t have content to display to the user. An empty state is an opportunity to engage and delight users. The empty state should tell users what it’s for and why they’re seeing it. Effective empty states also tell users what they can do next.  Illustrations should show data or system state (empty for instance), but not user input validation messaging.
+Empty states are used when an element doesn’t have content to display to the user. An empty state is an opportunity to engage and delight users. The empty state should tell users what it’s for and why they’re seeing it. Effective empty states also tell users what they can do next. Illustrations should show data or system state (empty for instance), but not user input validation messaging.
 
 Empty states have many causes, such as:
 - There’s **no data** the user can see.
