--- a/packages/design-system/ui/components/notifications/docs.mdx
+++ b/packages/design-system/ui/components/notifications/docs.mdx
@@ -14,7 +14,7 @@ import * as Base from './base/example';
 </CodeView>
 
 ## About Notifications
-The body of the notification is a clickable region that will prompt an additional browser tab with that record loaded and dismiss the notification. It is also dismissable by clicking the X icon.
+The body of the notification is a clickable region that will prompt an additional browser tab with that record loaded and dismiss the notification. It is also dismissible by clicking the X icon.
 
 ### Implementation Notes
 
