--- a/packages/design-system/ui/components/page-headers/docs.mdx
+++ b/packages/design-system/ui/components/page-headers/docs.mdx
@@ -75,7 +75,7 @@ The page header is located at the top of every record home. It includes the reco
 - When required, follow action is displayed to the right of the record title
 - Display one line of text, truncate when the length conflicts with the page level actions
 
-As shown in Field 3, web addresses and email addresses should be parsed and displayed as hyperlinks linking to the appropriate mailto: or web url. Do not modify the user's input, display as intended.
+As shown in Field 3, web addresses and email addresses should be parsed and displayed as hyperlinks linking to the appropriate `mailto` or web url. Do not modify the user's input, display as intended.
 
 When text is truncated, display full field text in browser tooltip on hover.
 
