--- a/packages/design-system/ui/components/path/docs.mdx
+++ b/packages/design-system/ui/components/path/docs.mdx
@@ -16,9 +16,9 @@ import * as PathExamples from './base/example';
 
 ### Accessibility
 
-This component importantly changes role depending on what state it is in. If a Path comes with Stage Coaching information, this pattern lends itself perfectly to being a traditional Tab Set. As you navigate the Path Stages, it&rsquo;s associated content changes with it.
+This component importantly changes role depending on what state it is in. If a Path comes with Stage Coaching information, this pattern lends itself perfectly to being a traditional Tab Set. As you navigate the Path Stages, it's associated content changes with it.
 
-On the other hand, if a Path doesn&rsquo;t have Path Stage Coaching information, we can no longer use the Tab Set role, as we would effectively be misleading our users because each Tab has no associated content. This may lead to users trying to find absent content. In this situation, this component is much more suited to being a Listbox component.
+On the other hand, if a Path doesn't have Path Stage Coaching information, we can no longer use the Tab Set role, as we would effectively be misleading our users because each Tab has no associated content. This may lead to users trying to find absent content. In this situation, this component is much more suited to being a Listbox component.
 
 The markup structure is identical, just some attributes change their values.
 
