--- a/packages/design-system/ui/components/picklist/docs.mdx
+++ b/packages/design-system/ui/components/picklist/docs.mdx
@@ -22,7 +22,7 @@ The target HTML element, `slds-combobox` and dropdown need to be wrapped in the 
 
 ## Accessibility
 
-A Picklist allows a user to select and set a value from a pre-defined list of options. As such we follow the ARIA Combobox widget pattern to implement it as it's the most appropriate concept to achieve this. The variant of Combobox we chose is the "Read-only" version, as a users keyboard input cannot directly affect the value set in the Combobox, but can only select a value from a pre-definied list. It also does not perform a search, or autocomplete function. It most closely resembles the HTML `select` element.
+A Picklist allows a user to select and set a value from a pre-defined list of options. As such we follow the ARIA Combobox widget pattern to implement it as it's the most appropriate concept to achieve this. The variant of Combobox we chose is the "Read-only" version, as a users keyboard input cannot directly affect the value set in the Combobox, but can only select a value from a pre-defined list. It also does not perform a search, or autocomplete function. It most closely resembles the HTML `select` element.
 
 Implementing a multi-select pattern with a Combobox is not standard, nor is it technically supported by the specification. Therefore great care should be paid to the extra steps we take to try and communicate multi-selection.
 
