--- a/packages/design-system/ui/components/pills/docs.mdx
+++ b/packages/design-system/ui/components/pills/docs.mdx
@@ -19,9 +19,9 @@ To create a pill, apply the `.slds-pill` class on a `<span>`.
 
 Depending on your context, you will either need a linked pill or a pill option inside of a listbox.
 
-For linked pills, a modifier class of `slds-pill_link` needs to be added to the existing `<span>` with the classname of `slds-pill`. You need an `<a>` inside of the span with the `slds-pill_link` class. The `<a>` will get the classname of `slds-pill__action`. This will treat the interactions differently from an unlinked pill option inside of a listbox.
+For linked pills, a modifier class of `slds-pill_link` needs to be added to the existing `<span>` with the class name of `slds-pill`. You need an `<a>` inside of the span with the `slds-pill_link` class. The `<a>` will get the class name of `slds-pill__action`. This will treat the interactions differently from an unlinked pill option inside of a listbox.
 
-For both linked pills and unlinked pill options, a `<span>` with the classname of `slds-pill__label` should contain the string of text describing the pill object.
+For both linked pills and unlinked pill options, a `<span>` with the class name of `slds-pill__label` should contain the string of text describing the pill object.
 
 Note, that a linked pill should not be used as a pill option inside of a listbox.
 
@@ -85,7 +85,7 @@ A Listbox of Pills is a way to display a list of selected options when performin
 
 **Interaction requirements**
 
-- Only 1 focusabled Pill per set of Pills
+- Only 1 focused Pill per set of Pills
 - The remove button must not be a focusable element, but can be clickable
 - Delete with a keyboard is performed with the `Backspace` or `Delete` key when focused on a pill
 
