--- a/packages/design-system/ui/components/scoped-notifications/docs.mdx
+++ b/packages/design-system/ui/components/scoped-notifications/docs.mdx
@@ -5,7 +5,7 @@ import { getDisplayElementById } from '../../shared/helpers';
 import * as ScopedNotificationExamples from './base/example';
 
 <div className="lead doc">
-  Scoped notifications serve advisory information for the user that is not important enough to justify an alert. It is often presented as a status bar scoped to the container. They are not dismissable.
+  Scoped notifications serve advisory information for the user that is not important enough to justify an alert. It is often presented as a status bar scoped to the container. They are not dismissible.
 </div>
 
 <CodeView exampleOnly>
