--- a/packages/design-system/ui/utilities/line-clamp/docs.mdx
+++ b/packages/design-system/ui/utilities/line-clamp/docs.mdx
@@ -19,7 +19,7 @@ SLDS supports four different line clamp limits:
 - `slds-line-clamp_large` - truncates at 7 lines of content
 
 <Blockquote type="warning" header="IE11 Not Supported">
-  <p>The use of the `line-clamp` css property is not supported in IE11.</p>
+  <p>The use of the <code>line-clamp</code> css property is not supported in IE11.</p>
 </Blockquote>
 
 <Blockquote type="warning" header="Not Supported on Container Elements">
