--- a/packages/design-system/ui/components/avatar-group/docs.mdx
+++ b/packages/design-system/ui/components/avatar-group/docs.mdx
@@ -66,7 +66,7 @@ Avatars of type image, icon, or initials can be used in combination with each ot
 </CodeView>
 
 ## Sizes
-Avatar Groups come in 4 different sizes: `x-small`, `small`, `medium`, and `large` by applying a `slds-avatar-group_{size}` modifier class on `slds-avatar-group`. If the size modifer class is not used, `medium` is also the default size.
+Avatar Groups come in 4 different sizes: `x-small`, `small`, `medium`, and `large` by applying a `slds-avatar-group_{size}` modifier class on `slds-avatar-group`. If the size modifier class is not used, `medium` is also the default size.
 
 ### With Images
 
