--- a/packages/design-system/ui/components/prompt/docs.mdx
+++ b/packages/design-system/ui/components/prompt/docs.mdx
@@ -17,7 +17,7 @@ A prompt uses the [base modal component](/components/modals) and then adds the c
 
 #### Markup
 
-Expected markup is the same as Modals (/components/modals), but with the following differences):
+Expected markup is the same as [Modals](/components/modals), but with the following differences):
 - Modal has `role="alertdialog"`
 - Modal has an `aria-describedby` attribute that matches the id of the modal message container.
 - Modal message container container should have `tabindex="0"`
@@ -28,11 +28,11 @@ Expected keyboard interaction is the same as Modals ([same as Modals](/component
 - Modal message container should take initial focus
 
 ### Accessibility
-Prompt notifications are similar to modals, in that they are a focus trap, but they should take a slightly different `role` of `alertdialog` to indicate their severity. Like modals they should be labelled by their headings, but additonally they should be described by the message details of the prompt.
+Prompt notifications are similar to modals, in that they are a focus trap, but they should take a slightly different `role` of `alertdialog` to indicate their severity. Like modals they should be labelled by their headings, but additionally they should be described by the message details of the prompt.
 
 The element containing the prompt message should be the target focus of the browser when it is displayed, which is why we add `tabindex="0"` to `slds-modal__container`.
 
-There is no requirement for a close button, as the confirmation button should be used to dismiss the prompt, along with the usual Esc key dismissal.
+There is no requirement for a close button, as the confirmation button should be used to dismiss the prompt, along with the usual `Esc` key dismissal.
 
 ## Base
 
