--- a/packages/design-system/ui/components/publishers/docs.mdx
+++ b/packages/design-system/ui/components/publishers/docs.mdx
@@ -27,7 +27,7 @@ The variants of the publishers have different use cases, so please pay attention
 
 The discussion feed publisher is found at the top of a feed stream. It contains basic and advanced publishing capabilities.
 
-The discussion feed is in a collapsed state by default. There are 3 states of the discussion feed that provide different feedback to the user. First, the collapsed state, this indicates the user has not interacted with the discussion feed publisher. When the user initiates an interaction with the publisher, by either focusing of the textara or clicking the "Share" button, through javascript the class of `slds-is-active` should be applied to the `slds-publisher` div. This class will expand the publisher box and display additional publisher actions.
+The discussion feed is in a collapsed state by default. There are 3 states of the discussion feed that provide different feedback to the user. First, the collapsed state, this indicates the user has not interacted with the discussion feed publisher. When the user initiates an interaction with the publisher, by either focusing of the textarea or clicking the "Share" button, through javascript the class of `slds-is-active` should be applied to the `slds-publisher` div. This class will expand the publisher box and display additional publisher actions.
 
 During the active state, before the user has begun typing or attaching additional content, the "Share" button should be disabled by applying the `disabled` attribute to the `<textarea>`. When the user begins typing, the `disabled` attribute should be toggled off.
 
@@ -45,7 +45,7 @@ During the active state, before the user has begun typing or attaching additiona
 
 The comment publisher is found at the bottom of a discussion feed comment thread. It contains basic publishing capabilities.
 
-The comment publisher is in a collapsed state by default. There are 4 states of the discussion feed that provide different feedback to the user. First, the collapsed state, this indicates the user has not interacted with the comment publisher. When the user initiates an interaction with the publisher, by either focusing of the textara or clicking the "Comment" button, through javascript the class of `slds-is-active` should be applied to the `slds-publisher` element. This class will expand the publisher box and display additional publisher actions.
+The comment publisher is in a collapsed state by default. There are 4 states of the discussion feed that provide different feedback to the user. First, the collapsed state, this indicates the user has not interacted with the comment publisher. When the user initiates an interaction with the publisher, by either focusing of the textarea or clicking the "Comment" button, through javascript the class of `slds-is-active` should be applied to the `slds-publisher` element. This class will expand the publisher box and display additional publisher actions.
 
 Due to the implementation of the comment publisher design, we used a faux textarea container and we'll need to apply the our focus state to that custom container. Using javascript, the class `slds-has-focus` should be applied to the `slds-publisher` element when the user interacts with `<textarea>`. When the user loses focus on the `<textarea>`, the class `slds-has-focus` should be toggled off from the `slds-publisher` element.
 
