fix(line-clamp): Capitalize subheading (#4159)

--- a/packages/design-system/ui/utilities/line-clamp/docs.mdx
+++ b/packages/design-system/ui/utilities/line-clamp/docs.mdx
@@ -59,7 +59,7 @@ The `slds-line-clamp_medium` classname will truncate text after five lines.
   {getDisplayElementById(Base.examples, 'medium')}
 </CodeView>
 
-### large
+### Large
 
 The `slds-line-clamp_large` classname will truncate text after seven lines.
 
